# cursor-for-spreadsheet

./: .cursorignore  .cursorindexingignore  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.cn.md  README.en.md  README.md
server/: .env.example  pyproject.toml
server/app/: config.py  main.py
server/app/agent/: __init__.py  actions.py  agent_helpers.py  base_agent.py  clarification.py  clarification_telemetry.py  context_assembler.py  (+12 more)
server/evaluation/: __main__.py  cases.py  runner.py
server/tests/: test_agent_clarification_reply.py  test_agent_clarification_route.py  test_agent_context_assembler.py  test_agent_helpers_model_copy.py  test_agent_memory_injection.py  test_agent_message_shape.py  test_agent_orchestrator_preview.py  test_agent_plan_validation_retry_route.py  test_agent_preview.py  test_agent_route_stage5.py  test_agent_stream_sse_order.py  test_agent_sync_order.py  test_audit_log.py  test_clarification.py  test_cloud_llm_sample_e2e.py  test_context_analyzer.py  test_data_context_render.py  test_data_store.py  test_data_upload.py  test_intent_analyzer.py  test_llm_debug_log.py  test_llm_http_client.py  test_llm_openrouter_parse.py  test_llm_pydantic_ai.py  test_load_sample.py  test_memory_compaction.py  test_message_discriminators.py  test_pa_ask_user_clarification.py  test_pa_decision.py  test_pa_state.py  test_pa_structured_plan.py  test_pa_tools.py  test_peek_filter.py  test_peek_range.py  test_plan_executor_row_access.py  test_plan_wire_serialization.py  test_profile_builder.py  test_prompt_content.py  test_prompts.py  test_server_boot_id.py  (+5 more)
(+105 files in other folders)
