[project]
name = "cursor-for-spreadsheet"
version = "0.1.0"
description = "FastAPI backend for Cursor for Spreadsheet."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.1.0",
    "pydantic>=2.8.0",
    "python-multipart>=0.0.9",
    "langgraph>=0.2.0",
    "pydantic-ai>=0.2.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
]

# Application project: only manage third-party deps; do not build/install a wheel.
[tool.uv]
package = false

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "integration: optional tests hitting real network (e.g. cloud LLM)",
]
